// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display error message when try submit an invalid email 1`] = `
<div
  className="has-error"
>
  <input
    className="form-control"
    onChange={[Function]}
    type="email"
  />
  <div
    className="error-message"
  >
    <span
      className="icon icon-form-error error-image"
    />
    <span
      className="error-text"
    >
      Sorry, we can't accept addresses from popular email providers (gmail, hotmail, yahoo, etc.). If you don't have any other work email address, please select 'I don't have a work email.'
    </span>
  </div>
  <button
    className="btn btn--blue work-email-confirmation__btn-submit-email"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Display error message when try submit without email 1`] = `
<div
  className="has-error"
>
  <input
    className="form-control"
    onChange={[Function]}
    type="email"
  />
  <div
    className="error-message"
  >
    <span
      className="icon icon-form-error error-image"
    />
    <span
      className="error-text"
    >
      Please specify a valid email address
    </span>
  </div>
  <button
    className="btn btn--blue work-email-confirmation__btn-submit-email"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Input Work Email render correctly 1`] = `
<div
  className=""
>
  <input
    className="form-control"
    onChange={[Function]}
    type="email"
  />
  <button
    className="btn btn--blue work-email-confirmation__btn-submit-email"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</div>
`;
